--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>个人信息</h1>
-    <iframe src="https://github.com/lianxing521/fq/blob/main/index.php" width="100%" height="200" frameborder="0"></iframe>
+    <iframe src="../index.php" width="100%" height="200" frameborder="0"></iframe>
 </body>
 </html>
